--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,7 @@ body {
     justify-content: center;
     padding-left: 20px; }
     .container .navigation li {
-      border: dotted #fff;
+      border: 0.5px dotted #fff;
       border-left: none;
       color: #fff;
       height: 18px;
@@ -123,7 +123,7 @@ body {
       justify-content: center;
       cursor: pointer; }
       .container .navigation li:first-child {
-        border-left: dotted #fff; }
+        border-left: 0.5px dotted #fff; }
       .container .navigation li span {
         width: 21px;
         height: 23px;
