--- a/scss/slider.scss
+++ b/scss/slider.scss
@@ -96,7 +96,7 @@
         justify-content: center;
         padding-left: 20px;
         li {
-            border:dotted #fff;
+            border:0.5px dotted #fff;
             border-left: none;
             color: #fff;
             height: 18px;
@@ -109,7 +109,7 @@
             justify-content: center;
             cursor: pointer;
             &:first-child {
-                border-left:dotted #fff;
+                border-left:0.5px dotted #fff;
             }
             span {
                 width: 21px;
