--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,5 +6,6 @@ body {
 
 @import 'fonts.scss';
 @import 'variables.scss';
+@import 'icons.scss';
 @import 'slider.scss';
-@import 'icons.scss'
+@import 'monk.scss';
