--- a/scss/monk.scss
+++ b/scss/monk.scss
@@ -1,38 +1,44 @@
 .monk {
-    .text {
-        color: #fff;
-        font-family: 'Klavika Rg';
-        font-size: 30px;
-        text-align: center;
+  .text {
+    color: #fff;
+    font-family: "Klavika Rg";
+    font-size: 30px;
+    text-align: center;
+  }
+
+  .ml2 .letter {
+    display: inline-block;
+    line-height: 1em;
+  }
+  .stage {
+    display: flex;
+    height: 330px;
+    width: 100%;
+  }
+  .box {
+    align-self: flex-end;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    background-image: url("../img/monk.png");
+    background-repeat: no-repeat;
+    height: 165px;
+    margin: 0 auto 0 auto;
+    transform-origin: bottom;
+    width: 116px; 
+  }
+  .bounce-1 {
+    animation-name: bounce-1;
+    animation-timing-function: linear;
+  }
+  @keyframes bounce-1 {
+    0% {
+      transform: translateY(0);
     }
-      
-    .ml2 .letter {
-        display: inline-block;
-        line-height: 1em;
+    50% {
+      transform: translateY(-10px);
     }
-    .stage {
-        display: flex;
-        height: 330px;
-        width: 100%;
+    100% {
+      transform: translateY(0);
     }
-    .box {
-        align-self: flex-end;
-        animation-duration: 1s;
-        animation-iteration-count: infinite;
-        background-image:url("../img/monk.png");
-        background-repeat: no-repeat;
-        height: 200px;
-        margin: 0 auto 0 auto;
-        transform-origin: bottom;
-        width: 200px; 
-    }
-    .bounce-1 {
-        animation-name: bounce-1;
-        animation-timing-function: linear;
-    }
-    @keyframes bounce-1 {
-        0%   { transform: translateY(0); }
-        50%  { transform: translateY(-10px); }
-        100% { transform: translateY(0); }
-    }
+  }
 }
