--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   height: 100%;
-  background: #000; }
+  background: #000;
+  overflow: hidden; }
 
 @font-face {
   font-family: "Klavika Bd";
@@ -246,6 +247,11 @@ body {
 .monk .ml2 .letter {
   display: inline-block;
   line-height: 1em; }
+
+.monk .dir-normal {
+  display: inline-block;
+  line-height: 1em;
+  opacity: 0; }
 
 .monk .stage {
   display: flex;
